// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MatchBottomDock visual guard > renders announcements, hand cards and command lane 1`] = `
<div
  class="MuiBox-root css-gvrn72"
>
  <div
    class="MuiStack-root css-fm002g-MuiStack-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1sz1mro-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); --Paper-overlay: linear-gradient(rgba(255, 255, 255, 0.051), rgba(255, 255, 255, 0.051));"
    >
      <div
        class="MuiBox-root css-1em705f"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-mu1xz-MuiTypography-root"
        >
          Envido
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-14zwqme-MuiTypography-root"
        >
          Truco
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1ymnob-MuiTypography-root"
        >
          Quiero
        </p>
      </div>
      <button
        aria-label="Abrir chat"
        class="MuiBox-root css-1w9hfqj"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-138z9zs-MuiSvgIcon-root"
          data-testid="ChatBubbleOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m0 14H6l-2 2V4h16z"
          />
        </svg>
        <span
          class="MuiBox-root css-0"
        >
          Chat
        </span>
      </button>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-rcu2tn-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); --Paper-overlay: linear-gradient(rgba(255, 255, 255, 0.051), rgba(255, 255, 255, 0.051));"
    >
      <div
        class="MuiBox-root css-8hnoxy"
      >
        <div
          class="MuiStack-root css-w34giv-MuiStack-root"
        >
          <div
            class="truco-play-card-interactive MuiBox-root css-uxynjk"
          >
            <div
              data-testid="game-card"
            >
              1e
            </div>
          </div>
          <div
            class="truco-play-card-interactive MuiBox-root css-18a9g97"
          >
            <div
              data-testid="game-card"
            >
              7o
            </div>
          </div>
          <div
            class="truco-play-card-interactive MuiBox-root css-wbr6ro"
          >
            <div
              data-testid="game-card"
            >
              3c
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-1gzodx9"
      />
      <div
        class="MuiBox-root css-252dd9"
      >
        <div
          class="MuiBox-root css-1ai17t5"
        >
          <div
            class="MuiBox-root css-inwa5g"
          >
            <div
              class="MuiBox-root css-16xd1m7"
            >
              <div
                class="MuiBox-root css-1mefu91"
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-1py3sou-MuiButtonBase-root-MuiButton-root"
                  tabindex="0"
                  type="button"
                >
                  Truco!
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MatchBottomDock visual guard > renders spectator waiting mode with hidden hand placeholders 1`] = `
<div
  class="MuiBox-root css-gvrn72"
>
  <div
    class="MuiStack-root css-fm002g-MuiStack-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1sz1mro-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); --Paper-overlay: linear-gradient(rgba(255, 255, 255, 0.051), rgba(255, 255, 255, 0.051));"
    >
      <div
        class="MuiBox-root css-1em705f"
      >
        <p
          class="MuiTypography-root MuiTypography-body2 css-7kzyxm-MuiTypography-root"
        >
          -
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-1jpp7th-MuiTypography-root"
        >
          -
        </p>
        <p
          class="MuiTypography-root MuiTypography-body2 css-fq4255-MuiTypography-root"
        >
          Sin anuncios
        </p>
      </div>
      <button
        aria-label="Abrir chat"
        class="MuiBox-root css-1w9hfqj"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-138z9zs-MuiSvgIcon-root"
          data-testid="ChatBubbleOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m0 14H6l-2 2V4h16z"
          />
        </svg>
        <span
          class="MuiBox-root css-0"
        >
          Chat
        </span>
      </button>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-rcu2tn-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12); --Paper-overlay: linear-gradient(rgba(255, 255, 255, 0.051), rgba(255, 255, 255, 0.051));"
    >
      <div
        class="MuiBox-root css-8hnoxy"
      >
        <div
          class="MuiStack-root css-w34giv-MuiStack-root"
        >
          <div
            class="MuiBox-root css-9kf9gm"
          />
        </div>
      </div>
      <div
        class="MuiBox-root css-1gzodx9"
      />
      <div
        class="MuiBox-root css-252dd9"
      >
        <div
          class="MuiBox-root css-1ai17t5"
        >
          <div
            class="MuiBox-root css-inwa5g"
          >
            <div
              class="MuiBox-root css-nz8yh0"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-1290f4r-MuiTypography-root"
              >
                Modo Espectador
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
